--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "babel": "5.8.21",
     "babel-runtime": "5.6.17",
+    "js-md5": "^0.6.0",
+    "moment": "^2.18.1",
     "socket.io": "^1.3.7",
     "thinkjs": "2.0.x"
   }
